# datafake-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
examples/: basic.rs  benchmark.rs
src/: config.rs  engine.rs  error.rs  generator.rs  lib.rs  types.rs
src/operators/: fake.rs  mod.rs
