[package]
name = "datafake-rs"
version = "0.1.1"
edition = "2021"
authors = ["Plasmatic Engineering <shankar@goplasmatic.io>"]
description = "High-performance JSON mock data generation using JSONLogic configuration"
documentation = "https://docs.rs/datafake-rs"
homepage = "https://github.com/GoPlasmatic/datafake-rs"
repository = "https://github.com/GoPlasmatic/datafake-rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["fake", "data", "json", "jsonlogic", "mock"]
categories = [
    "data-structures",
    "development-tools::testing",
    "web-programming",
]
exclude = [".github/*", ".gitignore", "CONTRIBUTING.md"]
rust-version = "1.70"

[dependencies]
datalogic-rs = "3.0.34"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]

[lib]
name = "datafake_rs"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

# [[example]]
# name = "custom_locale"
# path = "examples/custom_locale.rs"

# [[example]]
# name = "batch_generation"
# path = "examples/batch_generation.rs"
