[package]
name = "datafake-rs"
version = "0.1.5"
edition = "2024"
authors = ["Plasmatic Engineering <shankar@goplasmatic.io>"]
description = "High-performance JSON mock data generation using JSONLogic configuration"
documentation = "https://docs.rs/datafake-rs"
homepage = "https://github.com/GoPlasmatic/datafake-rs"
repository = "https://github.com/GoPlasmatic/datafake-rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["fake", "data", "json", "jsonlogic", "mock"]
categories = [
    "data-structures",
    "development-tools::testing",
    "web-programming",
]
exclude = [".github/*", ".gitignore", "CONTRIBUTING.md"]

[dependencies]
datalogic-rs = "3.0"
fake = { version = "4.4", features = ["derive", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]

[lib]
name = "datafake_rs"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
